--- a/pom.xml
+++ b/pom.xml
@@ -54,5 +54,11 @@
 			<version>5.7.0</version>
 		</dependency>
 	</dependencies>
-
+	<properties>
+		<!-- 文件拷贝时的编码 -->
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<!-- 编译时的编码 -->
+		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+	</properties>
 </project>
